--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^12.15.0",
     "chalk": "^5.4.1",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "got": "^14.4.6",
-    "inversify": "^7.5.1",
+    "inversify": "^6.0.1",
+    "mongoose": "^8.14.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
