--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/express": "^5.0.2",
+    "@types/mime-types": "^3.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^18.19.79",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -37,15 +39,19 @@
     "@typegoose/typegoose": "^12.15.0",
     "chalk": "^5.4.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "got": "^14.4.6",
     "http-status-codes": "^2.3.0",
     "inversify": "^6.0.1",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.14.1",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
