--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     ],
     "lib": [
       "ESNext"
-    ]
+    ],
   },
   "include": [
     "src/**/*.ts"
@@ -37,5 +37,6 @@
   ],
   "ts-node": {
     "esm": true
-  }
+  },
+  "files": ["./custom.d.ts"]
 }
