--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "got": "^14.4.6",
     "http-status-codes": "^2.3.0",
     "inversify": "^6.0.1",
+    "jose": "^6.0.11",
     "mime-types": "^3.0.1",
     "mongoose": "^8.14.1",
     "multer": "^2.0.0",
