--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/mime-types": "^3.0.0",
     "@types/multer": "^1.4.12",
@@ -42,6 +43,7 @@
     "class-validator": "^0.14.2",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
